--- a/.tekton/odh-base-image-cpu-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cpu-py312-c9s-push.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
@@ -8,8 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "main" && ( "base-images/utils/**".pathChanged() || "base-images/cpu/c9s-python-3.12/**".pathChanged() || ".tekton/odh-base-image-cpu-py312-c9s-push.yaml".pathChanged() )
-  creationTimestamp: null
+      == "main" && ( "base-images/cpu/c9s-python-3.12/**".pathChanged() || ".tekton/odh-base-image-cpu-py312-c9s-push.yaml".pathChanged() )
   labels:
     appstudio.openshift.io/application: opendatahub-release
     appstudio.openshift.io/component: odh-base-image-cpu-py312-c9s
@@ -39,7 +39,14 @@ spec:
     - linux/ppc64le
     - linux/s390x
   pipelineRef:
-    name: multiarch-push-pipeline
+    resolver: git
+    params:
+    - name: url
+      value: https://github.com/opendatahub-io/odh-konflux-central.git
+    - name: revision
+      value: main
+    - name: pathInRepo
+      value: pipeline/multi-arch-container-build.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-cpu-py312-c9s
   workspaces:
