--- a/.tekton/odh-base-image-cpu-py312-ubi9-push.yaml
+++ b/.tekton/odh-base-image-cpu-py312-ubi9-push.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
@@ -8,8 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "main" && ( "base-images/utils/**".pathChanged() || "base-images/cpu/ubi9-python-3.12/**".pathChanged() || ".tekton/odh-base-image-cpu-py312-ubi9-push.yaml".pathChanged() )
-  creationTimestamp: null
+      == "main" && ( "base-images/cpu/ubi9-python-3.12/**".pathChanged() || ".tekton/odh-base-image-cpu-py312-ubi9-push.yaml".pathChanged() )
   labels:
     appstudio.openshift.io/application: opendatahub-release
     appstudio.openshift.io/component: odh-base-image-cpu-py312-ubi9
@@ -23,7 +23,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/opendatahub/odh-base-image-cpu-py312-ubi9:{{revision}}
+    value: quay.io/opendatahub/odh-base-image-cpu-py312-ubi9:odh-stable
   - name: dockerfile
     value: base-images/cpu/ubi9-python-3.12/Dockerfile.cpu
   - name: path-context
@@ -33,7 +33,14 @@ spec:
     - linux-mxlarge/amd64
     - linux/arm64
   pipelineRef:
-    name: multiarch-push-pipeline
+    resolver: git
+    params:
+    - name: url
+      value: https://github.com/opendatahub-io/odh-konflux-central.git
+    - name: revision
+      value: main
+    - name: pathInRepo
+      value: pipeline/multi-arch-container-build.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-cpu-py312-ubi9
   workspaces:
