--- a/.tekton/odh-base-image-cuda-12-8-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cuda-12-8-py312-c9s-push.yaml
@@ -1,6 +1,6 @@
+---
 apiVersion: tekton.dev/v1
 kind: PipelineRun
-#test2
 metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/opendatahub-io/notebooks?rev={{revision}}
@@ -8,8 +8,7 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main"  && ( "base-images/utils/**".pathChanged() || "base-images/cuda/12.8/c9s-python-3.12/**".pathChanged() || ".tekton/odh-base-image-cuda-12-8-py312-c9s-push.yaml".pathChanged() )
-  creationTimestamp:
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" && ( "base-images/cuda/12.8/c9s-python-3.12/**".pathChanged() || ".tekton/odh-base-image-cuda-12-8-py312-c9s-push.yaml".pathChanged() )
   labels:
     appstudio.openshift.io/application: opendatahub-release
     appstudio.openshift.io/component: odh-base-image-cuda-py312-c9s
@@ -23,7 +22,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/opendatahub/odh-base-image-cuda-py312-c9s:{{revision}}
+    value: quay.io/opendatahub/odh-base-image-cuda-py312-c9s:v12.8-{{revision}}
   - name: dockerfile
     value: base-images/cuda/12.8/c9s-python-3.12/Dockerfile.cuda
   - name: build-platforms
@@ -37,7 +36,14 @@ spec:
     - '{{target_branch}}-{{revision}}'
     - v12.8
   pipelineRef:
-    name: multiarch-push-pipeline
+    resolver: git
+    params:
+    - name: url
+      value: https://github.com/opendatahub-io/odh-konflux-central.git
+    - name: revision
+      value: main
+    - name: pathInRepo
+      value: pipeline/multi-arch-container-build.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-cuda-py312-c9s-poc
   workspaces:
