--- a/.tekton/odh-base-image-rocm-6-4-py312-ubi9-push.yaml
+++ b/.tekton/odh-base-image-rocm-6-4-py312-ubi9-push.yaml
@@ -1,6 +1,6 @@
+---
 apiVersion: tekton.dev/v1
 kind: PipelineRun
-# test
 metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/opendatahub-io/notebooks?rev={{revision}}
@@ -8,13 +8,12 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main"  && ( "base-images/utils/**".pathChanged() || "base-images/rocm/6.4/ubi9-python-3.12/**".pathChanged() || ".tekton/odh-base-image-rocm-6-4-py312-ubi9-push.yaml".pathChanged() )
-  creationTimestamp:
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "stable" && ( "base-images/rocm/6.4/ubi9-python-3.12/**".pathChanged() || ".tekton/odh-base-image-rocm-6-4-py312-ubi9-push.yaml".pathChanged() )
   labels:
     appstudio.openshift.io/application: opendatahub-release
     appstudio.openshift.io/component: odh-base-image-rocm-py312-ubi9
     pipelines.appstudio.openshift.io/type: build
-  name: odh-base-image-rocm-6-4-y312-ubi9-on-push
+  name: odh-base-image-rocm-6-4-py312-ubi9-on-push
   namespace: open-data-hub-tenant
 spec:
   params:
@@ -23,7 +22,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/opendatahub/odh-base-image-rocm-py312-ubi9:{{revision}}
+    value: quay.io/opendatahub/odh-base-image-rocm-py312-ubi9:v6.4-{{revision}}
   - name: dockerfile
     value: base-images/rocm/6.4/ubi9-python-3.12/Dockerfile.rocm
   - name: path-context
@@ -33,7 +32,14 @@ spec:
     - '{{target_branch}}-{{revision}}'
     - v6.4
   pipelineRef:
-    name: singlearch-push-pipeline
+    resolver: git
+    params:
+    - name: url
+      value: https://github.com/opendatahub-io/odh-konflux-central.git
+    - name: revision
+      value: main
+    - name: pathInRepo
+      value: pipeline/multi-arch-container-build.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-rocm-py312-ubi9-poc
   workspaces:
