fix(base-images): use custom fix-permissions script in all Dockerfiles
The UBI and sclorg base images include a built-in fix-permissions script
from github.com/sclorg that only adjusts group ownership and permissions
for OpenShift compatibility. However, our custom fix-permissions script
(in base-images/utils/) additionally runs:

  find ... -exec chown ${CNB_USER_ID} {} +

This ensures files in /opt/app-root are owned by the 'default' user
(UID 1001) rather than root. Without this, files installed as root
remain owned by root, even though they are group-writable.

Investigation showed that quay.io/opendatahub/odh-base-image-cpu-py312-c9s
correctly has files owned by 'default:root' because cpu/c9s-python-3.12
already used the custom script. Other base images (UBI9, c9s with sclorg
python base) were using the upstream fix-permissions which lacks the
chown command.

This change ensures consistent file ownership across all base images by:
1. Copying our custom fix-permissions to /mnt/usr/bin/ in buildscripts
2. Installing it to /usr/bin/ to override the base image's version

--- a/base-images/cpu/c9s-python-3.12/Dockerfile.cpu
+++ b/base-images/cpu/c9s-python-3.12/Dockerfile.cpu
@@ -55,7 +55,7 @@ ENV CNB_USER_ID=1001 \
 RUN useradd -u ${CNB_USER_ID} -g ${CNB_GROUP_ID} -d ${HOME} -K HOME_MODE=0770 -K UMASK=0007 -m -s /bin/bash -c "Default Application User" default \
     && mkdir -m 770 "${HOME}/.cache"
 
-# permission fixer from github.com/sclorg
+# Custom fix-permissions script that extends sclorg version with chown to UID 1001
 COPY --from=buildscripts /mnt/usr/bin/ /usr/bin/
 
 RUN \
