RHOAIENG-46777: fix(ci): set explicit persist-credentials in checkout actions
Add explicit persist-credentials settings to all checkout actions:
- Set `persist-credentials: false` for PR build workflows that don't
  need git push (with reference to actions/checkout#2312)
- Set `persist-credentials: true` for automation workflows that need
  git push

--- a/.github/workflows/build-notebooks-pr-rhel.yaml
+++ b/.github/workflows/build-notebooks-pr-rhel.yaml
@@ -52,8 +52,11 @@ jobs:
         if: ${{ github.event_name == 'pull_request_target' }}
         with:
           ref: "refs/pull/${{ github.event.number }}/merge"
+          persist-credentials: false  # https://github.com/actions/checkout/issues/2312
       - uses: actions/checkout@v6
         if: ${{ github.event_name != 'pull_request_target' }}
+        with:
+          persist-credentials: false  # https://github.com/actions/checkout/issues/2312
 
       - uses: actions/setup-go@v6
         with:
