--- a/.github/workflows/update-buildconfigs.yaml
+++ b/.github/workflows/update-buildconfigs.yaml
@@ -38,6 +38,7 @@ jobs:
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       - name: Configure Git
         run: |
