chore(datascience/Dockerfile): workaround pyzmq build issues on ppc64le and s390x (#2861)
The build on s390x was failing because `CFLAGS="-O3"` was overwriting
the existing CFLAGS (which includes ``-Dundefined=64` needed for QEMU
to handle `ZMQ_CACHELINE_SIZE` detection).

We can't define this globally because that would break matplotlib's pybind11.

Therefore, install pyzmq separately with custom flags and constraints to address
build issues without affecting pybind11 dependencies on these architectures.

TODO: Make equivalent changes in Dockerfile.konflux.cpu in
red-hat-data-services/notebooks fork.

--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -444,6 +444,16 @@ if [ "$TARGETARCH" = "ppc64le" ]; then
     uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
 elif [ "$TARGETARCH" = "s390x" ]; then
     # For s390x, we need special flags and environment variables for building packages
+
+    # first, install pyzmq with our extra flags for libzmq
+    # https://github.com/opendatahub-io/notebooks/issues/1172
+    PYZMQ_REQ=$(python3 -c "import tomllib; print(next(f'{p[\"name\"]}=={p[\"version\"]}' for p in tomllib.load(open('pylock.toml', 'rb'))['packages'] if p['name'] == 'pyzmq'))")
+    GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1 \
+    CFLAGS="${CFLAGS:-} -O3" CXXFLAGS="${CXXFLAGS:-} -O3" \
+    uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match "${PYZMQ_REQ}"
+
+    # next, install everything else
+    # this is because matplotlib depends on pybind11 which won't build if we define `undefined`
     GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1 \
     CFLAGS="-O3" CXXFLAGS="-O3" \
     uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
