chore(tekton): update all base-image PipelineRuns to use compression pipeline
Update all base-image PipelineRuns to reference the new pipelines with
zstd:chunked compression support:

- Push pipelines: base-image-multiarch-push-pipeline
- Pull-request pipelines: base-image-multiarch-pull-request-pipeline

For ROCm images that were using singlearch-push-pipeline, switched to
multiarch pipeline with explicit linux-mxlarge/amd64 platform.

This enables faster image pulls for all base images including:
- CPU base images (c9s and ubi9)
- CUDA base images (11, 12.6, 12.8, 13.0)
- ROCm base images (6.2, 6.3, 6.4)

--- a/.tekton/odh-base-image-cpu-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cpu-py312-c9s-push.yaml
@@ -39,7 +39,7 @@ spec:
     - linux/ppc64le
     - linux/s390x
   pipelineRef:
-    name: multiarch-push-pipeline
+    name: base-image-multiarch-push-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-cpu-py312-c9s
   workspaces:
